--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -75,7 +75,7 @@ Specify a custom split with the `split` parameter:
 
 <Tip>
 
-Curious about how to load datasets for vision or audio? Check out the [image](./image_process) and [audio](./audio_process) loading guide!
+Curious about how to load datasets for vision or audio? Check out the [image](./image_process) and [audio](./audio_process) loading guides!
 
 </Tip>
 
