Remove mention as experimental feature

--- a/docs/source/audio_process.mdx
+++ b/docs/source/audio_process.mdx
@@ -8,7 +8,7 @@
 
 ## Installation
 
-The [`Audio`] feature is an experimental feature and should be installed as an extra dependency in 🤗 Datasets. Install the [`Audio`] feature (and its dependencies) with pip:
+The [`Audio`] feature should be installed as an extra dependency in 🤗 Datasets. Install the [`Audio`] feature (and its dependencies) with pip:
 
 ```bash
 pip install datasets[audio]
