--- a/docs/source/access.mdx
+++ b/docs/source/access.mdx
@@ -11,7 +11,7 @@ A [`Dataset`] object is returned when you load an instance of a dataset. This ob
 
 ## Metadata
 
-The [`Dataset`] object contains a lot of useful information about your dataset. For example, call [`dataset.info`] to return a short description of the dataset, the authors, and even the dataset size. This will give you a quick snapshot of the datasets most important attributes.
+The [`Dataset`] object contains a lot of useful information about your dataset. For example, access [`DatasetInfo`] to return a short description of the dataset, the authors, and even the dataset size. This will give you a quick snapshot of the datasets most important attributes.
 
 ```py
 >>> dataset.info
@@ -73,7 +73,7 @@ List the columns names with [`Dataset.column_names`]:
 ['idx', 'label', 'sentence1', 'sentence2']
 ```
 
-Get detailed information about the columns with [`Dataset.features`]:
+Get detailed information about the columns with [`~datasets.Features`]:
 
 ```py
 >>> dataset.features
