--- a/docs/source/load_hub.mdx
+++ b/docs/source/load_hub.mdx
@@ -34,7 +34,7 @@ Once you are happy with the dataset you want, load it in a single line with [`lo
 
 Some datasets, like the [General Language Understanding Evaluation (GLUE)](https://huggingface.co/datasets/glue) benchmark, are actually made up of several datasets. These sub-datasets are called **configurations**, and you must explicitly select one when you load the dataset. If you don't provide a configuration name, 🤗 Datasets will raise a `ValueError` and remind you to select a configuration.
 
-Use `get_dataset_config_names` to retrieve a list of all the possible configurations available to your dataset:
+Use the [`get_dataset_config_names`] function to retrieve a list of all the possible configurations available to your dataset:
 
 ```py
 from datasets import get_dataset_config_names
