Add installation instructions to image_process doc

--- a/docs/source/image_process.mdx
+++ b/docs/source/image_process.mdx
@@ -7,6 +7,14 @@
 - Use [`Dataset.map`] to quickly apply transforms to an entire dataset.
 - Add data augmentations to your images with [`Dataset.set_transform`].
 
+## Installation
+
+The [`Image`] feature should be installed as an extra dependency in 🤗 Datasets. Install the [`Image`] feature (and its dependencies) with pip:
+
+```bash
+pip install datasets[vision]
+```
+
 ## Image datasets
 
 The images in an image dataset are typically either a:
