--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -74,12 +74,12 @@ Specify a custom split with the `split` parameter:
 
 You may have a 🤗 Datasets loading script locally on your computer. You can load this dataset by passing to [`load_dataset`] one of the following paths:
 
-- The local path to the loading script file
-- The local path to the directory containing the loading script file (only if the script file has the same name as the directory)
+- The local path to the loading script file.
+- The local path to the directory containing the loading script file (only if the script file has the same name as the directory).
 
 ```py
 >>> dataset = load_dataset("path/to/local/loading_script/loading_script.py", split="train")
->>> dataset = load_dataset("path/to/local/loading_script", split="train")  # equivalently because the file has the same name as the directory
+>>> dataset = load_dataset("path/to/local/loading_script", split="train")  # equivalent because the file has the same name as the directory
 ```
 
 ## Local and remote files
