Fix: Add missing comma

--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -110,7 +110,7 @@ If you have more than one CSV file:
 You can also map the training and test splits to specific CSV files:
 
 ```py
->>> dataset = load_dataset('csv', data_files={'train': ['my_train_file_1.csv', 'my_train_file_2.csv'] 'test': 'my_test_file.csv'})
+>>> dataset = load_dataset('csv', data_files={'train': ['my_train_file_1.csv', 'my_train_file_2.csv'], 'test': 'my_test_file.csv'})
 ```
 
 To load remote CSV files via HTTP, you can pass the URLs:
