--- a/docs/source/image_process.mdx
+++ b/docs/source/image_process.mdx
@@ -40,6 +40,7 @@ The [`Image`] feature automatically decodes the data from the `image` column to 
 
 >>> dataset = load_dataset("food101", split="train[100:200]")
 >>> dataset[0]["image"]
+<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=384x512 at 0x16289FBE0>
 ```
 
 ![image_process_beignet](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/image_process_beignet.png)
@@ -52,6 +53,7 @@ To load an image from its path, use the [`Dataset.cast_column`] method. The [`Im
 
 >>> dataset = Dataset.from_dict({"image": ["path/to/image_1", "path/to/image_2", ..., "path/to/image_n"]}).cast_column("image", Image())
 >>> dataset[0]["image"]
+<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=1200x215 at 0x15E6D7160>]
 ```
 
 You can also access the path and bytes of an image file by setting `decode=False` when you load a dataset. In this case, you will need to cast the `image` column:
@@ -65,13 +67,13 @@ You can also access the path and bytes of an image file by setting `decode=False
 You can also load your image dataset with a `ImageFolder` dataset builder without writing a custom dataloader. Your image dataset structure should look like this:
 
 ```
-folder/dog/golden_retriever.png
-folder/dog/german_shepherd.png
-folder/dog/chihuahua.png
+folder/train/dog/golden_retriever.png
+folder/train/dog/german_shepherd.png
+folder/train/dog/chihuahua.png
 
-folder/cat/maine_coon.png
-folder/cat/bengal.png
-folder/cat/birman.png
+folder/train/cat/maine_coon.png
+folder/train/cat/bengal.png
+folder/train/cat/birman.png
 ```
 
 Then load your dataset by specifying `imagefolder` and the directory of your dataset in `data_dir`:
@@ -79,6 +81,8 @@ Then load your dataset by specifying `imagefolder` and the directory of your dat
 ```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder")
+>>> dataset["train"][0]["image"]
+<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=1200x215 at 0x15E6D7160>]
 ```
 
 Load remote datasets from their URLs with the `data_files` parameter:
@@ -88,6 +92,56 @@ Load remote datasets from their URLs with the `data_files` parameter:
 ```
 
 `ImageFolder` will create a `label` column, and the label name is based on the directory name.
+
+
+## ImageFolder with metadata
+
+If your image dataset comes with metadata, they will be also loaded. First, make sure your dataset has a `metadata.jsonl`:
+
+```
+folder/train/metadata.jsonl
+folder/train/0001.png
+folder/train/0002.png
+folder/train/0003.png
+```
+
+You can link the metadata in `metadata.jsonl` file to the images using the "file_path" field.
+
+### Image captioning
+
+Here is an example of `metadata.jsonl` for image captioning:
+
+```jsonl
+{"file_name": "0001.png", "text": "This is a golden retriever playing with a ball"}
+{"file_name": "0002.png", "text": "A german shepherd"}
+{"file_name": "0003.png", "text": "One chihuahua"}
+```
+
+`ImageFolder` will create a `text` column for the image captions:
+
+```py
+>>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", split="train")
+>>> dataset[0]["text"]
+This is a golden retriever playing with a ball
+```
+
+### Object detection
+
+Here is an example of `metadata.jsonl` for object detection:
+
+```jsonl
+{"file_name": "0001.png", "objects": {"bbox": [[302.0, 109.0, 73.0, 52.0]], "categories": [0]}}
+{"file_name": "0002.png", "objects": {"bbox": [[810.0, 100.0, 57.0, 28.0]], "categories": [1]}}
+{"file_name": "0003.png", "objects": {"bbox": [[160.0, 31.0, 248.0, 616.0], [741.0, 68.0, 202.0, 401.0]], "categories": [2, 2]}}
+```
+
+`ImageFolder` will create a `objects` column with the bounding boxes and the categories:
+
+```py
+>>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", split="train")
+>>> dataset[0]["objects"]
+{"bbox": [[302.0, 109.0, 73.0, 52.0]], "categories": [0]}
+```
 
 ## Map
 
