document drop_labels

--- a/docs/source/image_process.mdx
+++ b/docs/source/image_process.mdx
@@ -93,6 +93,7 @@ Load remote datasets from their URLs with the `data_files` parameter:
 
 `ImageFolder` will create a `label` column, and the label name is based on the directory name.
 
+You can pass `drop_labels=False` to ignore the `label` column, as defined in [`~datasets.packaged_modules.imagefolder.ImageFolderConfig`].
 
 ## ImageFolder with metadata
 
