📝 apply quentin review

--- a/docs/source/package_reference/builder_classes.mdx
+++ b/docs/source/package_reference/builder_classes.mdx
@@ -14,6 +14,8 @@
 
 [[autodoc]] datasets.DownloadManager
 
+[[autodoc]] datasets.StreamingDownloadManager
+
 [[autodoc]] datasets.DownloadMode
 
 [[autodoc]] datasets.SplitGenerator
