add redirect to dataset script in the repo structure page

--- a/docs/source/dataset_script.mdx
+++ b/docs/source/dataset_script.mdx
@@ -2,6 +2,8 @@
 
 Write a dataset script to load and share your own datasets. It is a Python file that defines the different configurations and splits of your dataset, as well as how to download and process the data.
 
+The script can download data files from any website, or from the same dataset repository.
+
 Any dataset script, for example `my_dataset.py`, can be placed in a folder or a repository named `my_dataset` and be loaded with:
 
 ```py
