--- a/docs/source/repository_structure.mdx
+++ b/docs/source/repository_structure.mdx
@@ -5,6 +5,8 @@ To host and share your dataset, you can create a dataset repository on the Huggi
 This guide will show you how to structure your dataset repository when you upload it.
 A dataset with a supported structure can be loaded automatically with [`~datasets.load_dataset`], and it will have a preview on its dataset page on the Hub.
 
+Note that you can also include a [python script](dataset_script.html) to define your dataset, for more flexibility.
+
 <Tip>
 
 The following examples use CSV files, but you can use any supported format (text, JSON, JSON Lines, CSV, Parquet).
