Add redirect to dataset script in the repo structure page (#4369)
* add redirect to dataset script in the repo structure page

* fix link

--- a/docs/source/repository_structure.mdx
+++ b/docs/source/repository_structure.mdx
@@ -5,6 +5,8 @@ To host and share your dataset, you can create a dataset repository on the Huggi
 This guide will show you how to structure your dataset repository when you upload it.
 A dataset with a supported structure can be loaded automatically with [`~datasets.load_dataset`], and it will have a preview on its dataset page on the Hub.
 
+Note that you can also include a [python script](dataset_script) to define your dataset, for more flexibility.
+
 <Tip>
 
 The following examples use CSV files, but you can use any supported format (text, JSON, JSON Lines, CSV, Parquet).
@@ -15,7 +17,7 @@ The following examples use CSV files, but you can use any supported format (text
 
 The simplest dataset structure has two files: *train.csv* and *test.csv*.
 
-Your repository will also contain a *README.md* file, the [dataset card](dataset_card.html) displayed on your dataset page.
+Your repository will also contain a *README.md* file, the [dataset card](dataset_card) displayed on your dataset page.
 
 ```
 my_dataset_repository/
