--- a/docs/source/quickstart.mdx
+++ b/docs/source/quickstart.mdx
@@ -18,7 +18,7 @@ pip install datasets
 
 ## Load the dataset and model
 
-Begin by loading the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/viewer/?dataset=glue&config=mrpc) training dataset from the [General Language Understanding Evaluation (GLUE) benchmark](https://huggingface.co/datasets/glue). MRPC is a corpus of human annotated sentence pairs used to train a model to determine whether sentence pairs are semantically equivalent.
+Begin by loading the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/glue/viewer/mrpc) training dataset from the [General Language Understanding Evaluation (GLUE) benchmark](https://huggingface.co/datasets/glue). MRPC is a corpus of human annotated sentence pairs used to train a model to determine whether sentence pairs are semantically equivalent.
 
 ```py
 >>> from datasets import load_dataset
