--- a/docs/source/package_reference/builder_classes.mdx
+++ b/docs/source/package_reference/builder_classes.mdx
@@ -28,6 +28,6 @@
 
 [[autodoc]] datasets.ReadInstruction
 
-[[autodoc]] datasets.utils.DownloadConfig
+[[autodoc]] datasets.DownloadConfig
 
 [[autodoc]] datasets.utils.Version
