--- a/docs/source/package_reference/builder_classes.mdx
+++ b/docs/source/package_reference/builder_classes.mdx
@@ -5,6 +5,7 @@
 🤗 Datasets relies on two main classes during the dataset building process: [`DatasetBuilder`] and [`BuilderConfig`].
 
 [[autodoc]] datasets.DatasetBuilder
+  - all
 
 [[autodoc]] datasets.GeneratorBasedBuilder
 
