--- a/docs/source/quickstart.mdx
+++ b/docs/source/quickstart.mdx
@@ -1,66 +1,83 @@
-# Quick Start
+# Quickstart
 
-The quick start is intended for developers who are ready to dive in to the code, and see an end-to-end example of how they can integrate 🤗 Datasets into their model training workflow. For beginners who are looking for a gentler introduction, we recommend you begin with the [tutorials](./tutorial).
+This quickstart is intended for developers ready to dive into the code and see an end-to-end example of how to integrate 🤗 Datasets into their model training workflow. If you are a beginner or a non-developer, we recommend starting with our [tutorials](./tutorial), where you will get a more thorough introduction.
 
-In the quick start, you will walkthrough all the steps to fine-tune [BERT](https://huggingface.co/bert-base-cased) on a paraphrase classification task. Depending on the specific dataset you use, these steps may vary, but the general steps of how to load a dataset and process it are the same.
+Each dataset is unique, and depending on the task, some datasets may require additional steps to prepare the data. But you can always use 🤗 Datasets tools to load and process a dataset. Choose the type of dataset you want to work with, and let's get started!
+
+<div class="mt-4">
+   <div class="w-full flex flex-col space-y-4 md:space-y-0 md:grid md:grid-cols-3 md:gap-y-4 md:gap-x-5">
+      <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/quickstart#nlp"
+         ><div class="w-full text-center bg-gradient-to-br from-emerald-400 to-blue-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">NLP</div>
+         <p class="text-gray-700">Tokenize a dataset and train a model to determine whether a pair of sentences have the same meaning.</p>
+      </a>
+      <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/quickstart#audio"
+         ><div class="w-full text-center bg-gradient-to-br from-violet-400 to-orange-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Audio</div>
+         <p class="text-gray-700">Resample an audio dataset and get it ready for a model to classify what type of banking issue a speaker is calling about.</p>
+      </a>
+      <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/quickstart#vision"
+         ><div class="w-full text-center bg-gradient-to-br from-cyan-400 to-pink-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Vision</div>
+         <p class="text-gray-700">Apply a data augmentation to an image dataset and get it ready for a model to diagnose disease in bean plants.</p>
+      </a>
+   </div>
+</div>
 
 <Tip>
 
-For more detailed information on loading and processing a dataset, take a look at [Chapter 3](https://huggingface.co/course/chapter3/1?fw=pt) of the Hugging Face course! It covers additional important topics like dynamic padding, and fine-tuning with the Trainer API.
+For more detailed information about the 🤗 Datasets library, check out [Chapter 5](https://huggingface.co/course/chapter5/1?fw=pt) of the Hugging Face course! It covers other important topics such as loading remote or local datasets, tools for cleaning up a dataset and creating your own dataset.
 
 </Tip>
 
-Get started by installing 🤗 Datasets:
+Start by installing 🤗 Datasets:
 
-```
+```bash
 pip install datasets
 ```
 
-## Load the dataset and model
+To work with audio datasets, install the [`Audio`] feature:
 
-Begin by loading the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/glue/viewer/mrpc) training dataset from the [General Language Understanding Evaluation (GLUE) benchmark](https://huggingface.co/datasets/glue). MRPC is a corpus of human annotated sentence pairs used to train a model to determine whether sentence pairs are semantically equivalent.
+```bash
+pip install datasets[audio]
+```
+
+To work with image datasets, install the [`Image`] feature:
+
+```bash
+pip install datasets[vision]
+```
+
+## NLP
+
+The fastest and easiest way to get started is by loading an existing dataset from the [Hugging Face Hub](https://huggingface.co/datasets). There are thousands of datasets to choose from, spanning many tasks. In this guide, you'll load the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/glue/viewer/mrpc) training dataset to train a model to determine whether a pair of sentences mean the same thing. As with all text datasets, you'll need to tokenize the dataset to prepare it for training.
+
+**1**. Load the MRPC dataset by providing the [`load_dataset`] function with the dataset name, dataset configuration (not all datasets will have a configuration), and dataset split:
 
 ```py
 >>> from datasets import load_dataset
->>> dataset = load_dataset('glue', 'mrpc', split='train')
+
+>>> dataset = load_dataset("glue", "mrpc", split="train")
 ```
 
-Next, import the pre-trained BERT model and its tokenizer from the [🤗 Transformers](https://huggingface.co/transformers/) library:
+**2**. Next, load a pretrained [BERT](https://huggingface.co/bert-base-uncased) model and its corresponding tokenizer from the [🤗 Transformers](https://huggingface.co/transformers/) library. It is totally normal to see a warning after you load the model about some weights not being initialized. This is expected because you are loading this model checkpoint for training with another task.
 
-<frameworkcontent>
-<pt>
 ```py
 >>> from transformers import AutoModelForSequenceClassification, AutoTokenizer
->>> model = AutoModelForSequenceClassification.from_pretrained('bert-base-cased')
-Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias']
-- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPretraining model).
-- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).
-Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.weight', 'classifier.bias']
-You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.
->>> tokenizer = AutoTokenizer.from_pretrained('bert-base-cased')
-```
-</pt>
-<tf>
-```py
+
+>>> model = AutoModelForSequenceClassification.from_pretrained("bert-base-uncased")
+>>> tokenizer = AutoTokenizer.from_pretrained("bert-base-uncased")
+===PT-TF-SPLIT===
 >>> from transformers import TFAutoModelForSequenceClassification, AutoTokenizer
->>> model = TFAutoModelForSequenceClassification.from_pretrained("bert-base-cased")
-Some weights of the model checkpoint at bert-base-cased were not used when initializing TFBertForSequenceClassification: ['nsp___cls', 'mlm___cls']
-- This IS expected if you are initializing TFBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPretraining model).
-- This IS NOT expected if you are initializing TFBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).
-Some weights of TFBertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['dropout_37', 'classifier']
-You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.
->>> tokenizer = AutoTokenizer.from_pretrained('bert-base-cased')
+
+>>> model = TFAutoModelForSequenceClassification.from_pretrained("bert-base-uncased")
+>>> tokenizer = AutoTokenizer.from_pretrained("bert-base-uncased")
 ```
-</tf>
-</frameworkcontent>
 
-## Tokenize the dataset
+**3**. Tokenize the dataset with the tokenizer you just loaded. You should also truncate and pad the text into tidy rectangular tensors. The tokenizer generates three new columns in the dataset: `input_ids`, `token_type_ids`, and an `attention_mask`. These are the inputs to your model.
 
-The next step is to tokenize the text in order to build sequences of integers the model can understand. Encode the entire dataset with [`Dataset.map`], and truncate and pad the inputs to the maximum length of the model. This ensures the appropriate tensor batches are built.
+Use the [`~Dataset.map`] function to speed up processing by applying your tokenization function to batches of examples in the dataset:
 
 ```py
 >>> def encode(examples):
-...     return tokenizer(examples['sentence1'], examples['sentence2'], truncation=True, padding='max_length')
+...     return tokenizer(examples["sentence1"], examples["sentence2"], truncation=True, padding="max_length")
 
 >>> dataset = dataset.map(encode, batched=True)
 >>> dataset[0]
@@ -73,107 +90,41 @@ The next step is to tokenize the text in order to build sequences of integers th
 'attention_mask': array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])}
 ```
 
-Notice how there are three new columns in the dataset: `input_ids`, `token_type_ids`, and `attention_mask`. These columns are the inputs to the model.
+**4**. Rename the `label` column to `labels`, which is the expected input name in [BertForSequenceClassification](https://huggingface.co/docs/transformers/main/en/model_doc/bert#transformers.BertForSequenceClassification):
 
-## Format the dataset
+```py
+>>> dataset = dataset.map(lambda examples: {"labels": examples["label"]}, batched=True)
+```
 
-Depending on whether you are using PyTorch, TensorFlow, or JAX, you will need to format the dataset accordingly. There are three changes you need to make to the dataset:
+**5**. Use the [`~Dataset.set_format`] function to set the dataset format according to the machine learning framework you're using and specify the columns you want to format. The [`~Dataset.set_format`] function applies the formatting on-the-fly. 
+
+After setting the format, create a dataset using your framework's class or API:
 
 <frameworkcontent>
 <pt>
-1. Rename the `label` column to `labels`, the expected input name in [BertForSequenceClassification](https://huggingface.co/transformers/model_doc/bert#transformers.BertForSequenceClassification.forward):
-
-```py
->>> dataset = dataset.map(lambda examples: {'labels': examples['label']}, batched=True)
-```
-
-2. Retrieve the actual tensors from the Dataset object instead of using the current Python objects.
-3. Filter the dataset to only return the model inputs: `input_ids`, `token_type_ids`, and `attention_mask`.
-
-[`Dataset.set_format`] completes the last two steps on-the-fly. After you set the format, wrap the dataset in `torch.utils.data.DataLoader`:
-
+Wrap the dataset in [`torch.utils.data.DataLoader`](https://alband.github.io/doc_view/data.html?highlight=torch%20utils%20data%20dataloader#torch.utils.data.DataLoader):
 
 ```py
 >>> import torch
->>> dataset.set_format(type='torch', columns=['input_ids', 'token_type_ids', 'attention_mask', 'labels'])
+
+>>> dataset.set_format(type="torch", columns=["input_ids", "token_type_ids", "attention_mask", "labels"])
 >>> dataloader = torch.utils.data.DataLoader(dataset, batch_size=32)
->>> next(iter(dataloader))
-{'attention_mask': tensor([[1, 1, 1,  ..., 0, 0, 0],
-                        [1, 1, 1,  ..., 0, 0, 0],
-                        [1, 1, 1,  ..., 0, 0, 0],
-                        ...,
-                        [1, 1, 1,  ..., 0, 0, 0],
-                        [1, 1, 1,  ..., 0, 0, 0],
-                        [1, 1, 1,  ..., 0, 0, 0]]),
-'input_ids': tensor([[  101,  7277,  2180,  ...,     0,     0,     0],
-                  [  101, 10684,  2599,  ...,     0,     0,     0],
-                  [  101,  1220,  1125,  ...,     0,     0,     0],
-                  ...,
-                  [  101, 16944,  1107,  ...,     0,     0,     0],
-                  [  101,  1109, 11896,  ...,     0,     0,     0],
-                  [  101,  1109,  4173,  ...,     0,     0,     0]]),
-'label': tensor([1, 0, 1, 0, 1, 1, 0, 1]),
-'token_type_ids': tensor([[0, 0, 0,  ..., 0, 0, 0],
-                     [0, 0, 0,  ..., 0, 0, 0],
-                     [0, 0, 0,  ..., 0, 0, 0],
-                     ...,
-                     [0, 0, 0,  ..., 0, 0, 0],
-                     [0, 0, 0,  ..., 0, 0, 0],
-                     [0, 0, 0,  ..., 0, 0, 0]])}
 ```
 </pt>
 <tf>
-1. Rename the `label` column to `labels`, the expected input name in [TFBertForSequenceClassification](https://huggingface.co/transformers/model_doc/bert#tfbertforsequenceclassification):
-
-```py
->>> dataset = dataset.map(lambda examples: {'labels': examples['label']}, batched=True)
-```
-
-2. Retrieve the actual tensors from the Dataset object instead of using the current Python objects.
-3. Filter the dataset to only return the model inputs: `input_ids`, `token_type_ids`, and `attention_mask`.
-
-[`Dataset.set_format`] completes the last two steps on-the-fly. After you set the format, wrap the dataset in `tf.data.Dataset`:
-
+Wrap the dataset in [`tf.data.Dataset`](https://www.tensorflow.org/api_docs/python/tf/data/Dataset):
 
 ```py
 >>> import tensorflow as tf
->>> dataset.set_format(type='tensorflow', columns=['input_ids', 'token_type_ids', 'attention_mask', 'labels'])
->>> features = {x: dataset[x].to_tensor(default_value=0, shape=[None, tokenizer.model_max_length]) for x in ['input_ids', 'token_type_ids', 'attention_mask']}
->>> tfdataset = tf.data.Dataset.from_tensor_slices((features, dataset["labels"])).batch(32)
->>> next(iter(tfdataset))
-({'input_ids': <tf.Tensor: shape=(32, 512), dtype=int32, numpy=
-array([[  101,  7277,  2180, ...,     0,     0,     0],
-   [  101, 10684,  2599, ...,     0,     0,     0],
-   [  101,  1220,  1125, ...,     0,     0,     0],
-   ...,
-   [  101,  1109,  2026, ...,     0,     0,     0],
-   [  101, 22263,  1107, ...,     0,     0,     0],
-   [  101,   142,  1813, ...,     0,     0,     0]], dtype=int32)>, 'token_type_ids': <tf.Tensor: shape=(32, 512), dtype=int32, numpy=
-array([[0, 0, 0, ..., 0, 0, 0],
-   [0, 0, 0, ..., 0, 0, 0],
-   [0, 0, 0, ..., 0, 0, 0],
-   ...,
-   [0, 0, 0, ..., 0, 0, 0],
-   [0, 0, 0, ..., 0, 0, 0],
-   [0, 0, 0, ..., 0, 0, 0]], dtype=int32)>, 'attention_mask': <tf.Tensor: shape=(32, 512), dtype=int32, numpy=
-array([[1, 1, 1, ..., 0, 0, 0],
-   [1, 1, 1, ..., 0, 0, 0],
-   [1, 1, 1, ..., 0, 0, 0],
-   ...,
-   [1, 1, 1, ..., 0, 0, 0],
-   [1, 1, 1, ..., 0, 0, 0],
-   [1, 1, 1, ..., 0, 0, 0]], dtype=int32)>}, <tf.Tensor: shape=(32,), dtype=int64, numpy=
-array([1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1,
-   0, 1, 1, 1, 0, 0, 1, 1, 1, 0])>)
+
+>>> dataset.set_format(type="tensorflow", columns=["input_ids", "token_type_ids", "attention_mask", "labels"])
+>>> features = {x: dataset[x] for x in ["input_ids", "token_type_ids", "attention_mask"]}
+>>> tf_dataset = tf.data.Dataset.from_tensor_slices((features, dataset["labels"])).batch(32)
 ```
 </tf>
 </frameworkcontent>
 
-## Train the model
-
-<frameworkcontent>
-<pt>
-Lastly, create a simple training loop and start training:
+**6**. Start training with the machine learning framework you're using!
 
 ```py
 >>> from tqdm import tqdm
@@ -190,22 +141,115 @@ Lastly, create a simple training loop and start training:
 ...         optimizer.zero_grad()
 ...         if i % 10 == 0:
 ...             print(f"loss: {loss}")
-```
-</pt>
-<tf>
-Lastly, compile the model and start training:
-
-```py
+===PT-TF-SPLIT===
 >>> loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(reduction=tf.keras.losses.Reduction.NONE, from_logits=True)
 >>> opt = tf.keras.optimizers.Adam(learning_rate=3e-5)
 >>> model.compile(optimizer=opt, loss=loss_fn, metrics=["accuracy"])
 >>> model.fit(tfdataset, epochs=3)
 ```
-</tf>
-</frameworkcontent>
+
+## Audio
+
+Audio datasets are loaded just like text datasets. However, an audio dataset is preprocessed a bit differently. Instead of a tokenizer, you'll need a [feature extractor](https://huggingface.co/docs/transformers/main_classes/feature_extractor#feature-extractor). An audio input may also require resampling its sampling rate to match the sampling rate of the pretrained model you're using. In this guide, you'll prepare the [MInDS-14](https://huggingface.co/datasets/PolyAI/minds14) dataset for a model train on and classify the banking issue a customer is having.
+
+**1**. Load the MInDS-14 dataset by providing the [`load_dataset`] function with the dataset name, dataset configuration (not all datasets will have a configuration), and a dataset split:
+
+```py
+>>> from datasets import load_dataset, Audio
+
+>>> dataset = load_dataset("PolyAI/minds14", "en-US", split="train")
+```
+
+**2**. Next, load a pretrained [Wav2Vec2](https://huggingface.co/facebook/wav2vec2-base) model and its corresponding feature extractor from the [🤗 Transformers](https://huggingface.co/transformers/) library. It is totally normal to see a warning after you load the model about some weights not being initialized. This is expected because you are loading this model checkpoint for training with another task.
+
+```py
+>>> from transformers import AutoModelForAudioClassification, AutoFeatureExtractor
+
+>>> model = AutoModelForAudioClassification.from_pretrained("facebook/wav2vec2-base")
+>>> feature_extractor = AutoFeatureExtractor.from_pretrained("facebook/wav2vec2-base")
+```
+
+**3**. The [MInDS-14](https://huggingface.co/datasets/PolyAI/minds14) dataset card indicates the sampling rate is 8kHz, but the Wav2Vec2 model was pretrained on a sampling rate of 16kHZ. You'll need to upsample the `audio` column with the [`~Dataset.cast_column`] function and [`Audio`] feature to match the model's sampling rate.
+
+```py
+>>> dataset = dataset.cast_column("audio", Audio(sampling_rate=16000))
+>>> dataset[0]["audio"]
+{'array': array([ 2.3443763e-05,  2.1729663e-04,  2.2145823e-04, ...,
+         3.8356509e-05, -7.3497440e-06, -2.1754686e-05], dtype=float32),
+ 'path': '/root/.cache/huggingface/datasets/downloads/extracted/f14948e0e84be638dd7943ac36518a4cf3324e8b7aa331c5ab11541518e9368c/en-US~JOINT_ACCOUNT/602ba55abb1e6d0fbce92065.wav',
+ 'sampling_rate': 16000}
+```
+
+**4**. Create a function that will preprocess the audio `array` with the feature extractor, and truncate and pad the sequences into tidy rectangular tensors. The most important thing to remember here is to call the audio `array` in the feature extractor since the `array` - the actual speech signal - is the model input.
+
+Once you have the `preprocess_function`, use the [`~Dataset.map`] function to speed up processing by applying the function to batches of examples in the dataset.
+
+```py
+>>> def preprocess_function(examples):
+...     audio_arrays = [x["array"] for x in examples["audio"]]
+...     inputs = feature_extractor(
+...         audio_arrays,
+...         sampling_rate=16000,
+...         padding=True,
+...         max_length=100000,
+...         truncation=True,
+...     )
+...     return inputs
+
+>>> dataset = dataset.map(preprocess_function, batched=True)
+```
+
+**5**. Use the [`~Dataset.rename_column`] function to rename the `intent_class` column to `labels`, which is the expected input name in [Wav2Vec2ForSequenceClassification](https://huggingface.co/docs/transformers/main/en/model_doc/wav2vec2#transformers.Wav2Vec2ForSequenceClassification):
+
+```py
+>>> dataset = dataset.rename_column("intent_class", "labels")
+```
+
+**6**. Create a dataset using your framework's class or API, and start training!
+
+## Vision
+
+Image datasets are loaded just like text datasets. However, instead of a tokenizer, you'll need a [feature extractor](https://huggingface.co/docs/transformers/main_classes/feature_extractor#feature-extractor) to preprocess the dataset. An image input is a sequence of pixel values that represent an image. Applying some data augmentation to an image in computer vision is common to make the model more robust against overfitting. You're free to use any data augmentation library you want, and then you can apply the augmentations to your dataset with 🤗 Datasets. In this guide, you'll load the [Beans](https://huggingface.co/datasets/beans) dataset and get it ready for the model to train on and identify disease from the leaf images.
+
+**1**. Load the Beans dataset by providing the [`load_dataset`] function with the dataset name and a dataset split:
+
+```py
+>>> from datasets import load_dataset, Image
+
+>>> dataset = load_dataset("beans", split="train")
+```
+
+**2**. Now you can add some data augmentations to your dataset with any library ([Albumentations](https://albumentations.ai/), [imgaug](https://imgaug.readthedocs.io/en/latest/), [Kornia](https://kornia.readthedocs.io/en/latest/)) you like. Here, you'll use [torchvision](https://pytorch.org/vision/stable/transforms.html) to randomly change the color properties of an image:
+
+```py
+>>> from torchvision.transforms import Compose, ColorJitter, ToTensor
+
+>>> jitter = Compose(
+...     [
+...          ColorJitter(brightness=0.25, contrast=0.25, saturation=0.25, hue=0.5),
+...          ToTensor(),
+...     ]
+... )
+```
+
+**3**. Create a function to apply your transform to your dataset and generate your model input: `pixel_values`.
+
+```python
+>>> def transforms(examples):
+...     examples["pixel_values"] = [jitter(image.convert("RGB")) for image in examples["image"]]
+...     return examples
+```
+
+**4**. Use the [`~Dataset.set_transform`] function to apply the transformation on-the-fly to your dataset:
+
+```py
+>>> dataset = dataset.set_transform(transforms)
+```
+
+**5**. Create a dataset using your framework's class or API, and start training!
 
 ## What's next?
 
-This completes the basic steps of loading a dataset to train a model. You loaded and processed the MRPC dataset to fine-tune BERT to determine whether sentence pairs have the same meaning.
+This completes the 🤗 Datasets quickstart! You can load any text, audio, or image dataset with a single function and get it ready for your model to train on.
 
-For your next steps, take a look at our [How-to guides](./how_to) and learn how to achieve a specific task (e.g. load a dataset offline, add a dataset to the Hub, change the name of a column). Or if you want to deepen your knowledge of 🤗 Datasets core concepts, read our [Conceptual Guides](./about_arrow).
+For your next steps, take a look at our [How-to guides](./how_to) and learn how to do more specific things like loading different dataset formats, aligning labels, and streaming large datasets. If you're interested in learning more about 🤗 Datasets core concepts, grab a cup of coffee and read our [Conceptual Guides](./about_arrow)!
