--- a/docs/source/use_with_tensorflow.mdx
+++ b/docs/source/use_with_tensorflow.mdx
@@ -6,7 +6,7 @@
 
 By default, datasets return regular Python objects: integers, floats, strings, lists, etc.
 
-To get TensorFlow tensors instead, you can set the format of the dataset to "tf":
+To get TensorFlow tensors instead, you can set the format of the dataset to `tf`:
 
 ```py
 >>> from datasets import Dataset
