--- a/docs/source/use_with_tensorflow.mdx
+++ b/docs/source/use_with_tensorflow.mdx
@@ -51,7 +51,7 @@ In particular, a TensorFlow formatted dataset outputs a `RaggedTensor` instead o
 {'data': <tf.RaggedTensor [[1, 2], [3, 4]]>}
 ```
 
-To get one single tensor, you must explicitly use the Array feature type and specify the shape of your tensors:
+To get a single tensor, you must explicitly use the Array feature type and specify the shape of your tensors:
 
 ```py
 >>> from datasets import Dataset, Features, Array2D
