--- a/docs/source/use_with_tensorflow.mdx
+++ b/docs/source/use_with_tensorflow.mdx
@@ -40,7 +40,7 @@ array([[1, 2],
 ### N-dimensional arrays
 
 If your dataset consists of N-dimensional arrays, you will see that by default they are considered as nested lists.
-In particular, a TensorFlow formatted dataset outputs a `RaggedTensor` instead of one single tensor:
+In particular, a TensorFlow formatted dataset outputs a `RaggedTensor` instead of a single tensor:
 
 ```py
 >>> from datasets import Dataset
