--- a/docs/source/use_with_tensorflow.mdx
+++ b/docs/source/use_with_tensorflow.mdx
@@ -4,7 +4,7 @@ This document is a quick introduction to using `datasets` with TensorFlow, with 
 `tf.Tensor` objects out of our datasets, and how to stream data from Hugging Face `Dataset` objects to Keras methods
 like `model.fit()`.
 
-### Dataset format
+## Dataset format
 
 By default, datasets return regular Python objects: integers, floats, strings, lists, etc.
 
