--- a/docs/source/use_with_tensorflow.mdx
+++ b/docs/source/use_with_tensorflow.mdx
@@ -75,7 +75,7 @@ To get a single tensor, you must explicitly use the Array feature type and speci
 ```
 
 
-### Other feature types
+## Other feature types
 
 [`ClassLabel`] data are properly converted to tensors:
 
