--- a/docs/source/use_with_tensorflow.mdx
+++ b/docs/source/use_with_tensorflow.mdx
@@ -39,7 +39,7 @@ array([[1, 2],
        [3, 4]])>}
 ```
 
-### N-dimensional arrays
+## N-dimensional arrays
 
 If your dataset consists of N-dimensional arrays, you will see that by default they are considered as nested lists.
 In particular, a TensorFlow formatted dataset outputs a `RaggedTensor` instead of a single tensor:
