--- a/docs/source/quickstart.mdx
+++ b/docs/source/quickstart.mdx
@@ -23,7 +23,7 @@ Each dataset is unique, and depending on the task, some datasets may require add
 
 <Tip>
 
-For more detailed information about the 🤗 Datasets library, check out [Chapter 5](https://huggingface.co/course/chapter5/1?fw=pt) of the Hugging Face course! It covers other important topics such as loading remote or local datasets, tools for cleaning up a dataset and creating your own dataset.
+Check out [Chapter 5](https://huggingface.co/course/chapter5/1?fw=pt) of the Hugging Face course to learn more about other important topics such as loading remote or local datasets, tools for cleaning up a dataset and creating your own dataset.
 
 </Tip>
 
